--- a/deployment.yaml
+++ b/deployment.yaml
@@ -76,8 +76,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$1 
 spec:
   rules:
-    - host: nginx.local.test
-      http:
+    - http:
         paths:
           - path: /
             pathType: Prefix
@@ -86,8 +85,7 @@ spec:
                 name: my-service
                 port:
                   number: 80
-    - host: nginx.mylocal.test
-      http:
+    - http:
         paths:
           - path: /
             pathType: Prefix
