--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: websubhash/nginxtest:landingclient6
+        image: websubhash/nginxtest:landingclient7
         ports:
         - containerPort: 80
       imagePullSecrets:
@@ -78,7 +78,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$1 
 spec:
   rules:
-      http:
+    - http:
         paths:
           - path: /
             pathType: Prefix
