--- a/deployment.yaml
+++ b/deployment.yaml
@@ -78,7 +78,8 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$1 
 spec:
   rules:
-    - http:
+    - host: nginx.mylocal.test
+      http:
         paths:
           - path: /
             pathType: Prefix
