--- a/deployment.yaml
+++ b/deployment.yaml
@@ -78,7 +78,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$1 
 spec:
   rules:
-    - host: nginx.mylocal.test
+    - host: nginx.local.test
       http:
         paths:
           - path: /
