--- a/deployment.yaml
+++ b/deployment.yaml
@@ -81,7 +81,7 @@ spec:
     - host: nginx.local.testing
       http:
         paths:
-          - path: /(.*)
+          - path: /
             pathType: Prefix
             backend:
               service:
