--- a/deployment.yaml
+++ b/deployment.yaml
@@ -55,7 +55,7 @@ spec:
     - protocol: TCP
       port: 80
       # targetPort: 80
-#   type: NodePort
+  type: NodePort
 ---
 apiVersion: v1
 kind: Service
@@ -68,7 +68,7 @@ spec:
     - protocol: TCP
       port: 80
       # targetPort: 9376
-#   type: NodePort
+  type: NodePort
 ---
 apiVersion: networking.k8s.io/v1 
 kind: Ingress 
@@ -81,7 +81,7 @@ spec:
     - host: nginx.local.testing
       http:
         paths:
-          - path: /
+          - path: /(.*)
             pathType: Prefix
             backend:
               service:
