--- a/deployment.yaml
+++ b/deployment.yaml
@@ -55,8 +55,8 @@ spec:
       app: httpd
   ports:
     - protocol: TCP
-      port: 3002
-      # targetPort: 80
+      port: 80
+      targetPort: 3002
   type: NodePort
 ---
 apiVersion: v1
